--- a/Madmath/core/pom.xml
+++ b/Madmath/core/pom.xml
@@ -32,7 +32,20 @@
 			<groupId>com.badlogicgames.gdx</groupId>
 			<artifactId>gdx-backend-lwjgl</artifactId>
 		</dependency>
-	</dependencies>
+		<!-- jmockit -->
+		<dependency>
+			<groupId>org.jmockit</groupId>
+			<artifactId>jmockit</artifactId>
+			<version>1.8</version>
+			<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
@@ -57,6 +70,25 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-        </plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-javaagent:"${settings.localRepository}/org/jmockit/jmockit/1.8/jmockit-1.8.jar=coverage"</argLine>
+					<disableXmlReport>false</disableXmlReport>
+					<systemPropertyVariables>
+						<coverage-output>html</coverage-output>
+						<coverage-outputDir>${project.build.directory}/codecoverage-output</coverage-outputDir>
+						<coverage-metrics>all</coverage-metrics>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>Central Repository</id>
+			<url>https://repo1.maven.org/maven2/</url>
+		</repository>
+	</repositories>
 </project>
